# nightshade-template

./: .gitignore  Cargo.toml  README.md  about.toml  index.html  justfile  template-6bfad62b7ea9ae13.js  template-78dd84c13904c159.js  template-8bac4a6f34fb71a3.js  template-b6464c1113569220.js  template-d954c33ae012787c.js  template-da41b4124a34a6.js  template-fed172d918ef7516.js
.github/workflows/: rust.yml
plugins/editor-plugin/: Cargo.toml
plugins/editor-plugin/src/: lib.rs
plugins/engine-plugin/: Cargo.toml
plugins/engine-plugin/src/: lib.rs
plugins/example-plugin/: Cargo.toml
plugins/example-plugin/src/: lib.rs
plugins/game-plugin/: Cargo.toml
plugins/game-plugin/src/: lib.rs
plugins/plugins/: example_plugin.wasm
plugins/shared/: Cargo.toml
plugins/shared/src/: lib.rs
src/: main.rs  plugin_runtime.rs
