[workspace]
members = ["plugins/engine-plugin", "plugins/shared", "plugins/game-plugin"]
resolver = "2"

[package]
name = "template"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
nightshade = "0.6.30"
plugins-shared = { path = "plugins/shared", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[features]
default = ["tracing"]
plugins = ["nightshade/plugin_runtime", "dep:plugins-shared"]
scripting = ["nightshade/scripting"]
openxr = ["nightshade/openxr"]
steam = ["nightshade/steam"]
tracing = ["nightshade/tracing"]
