[package]
name = "template"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
nightshade = { version = "0.6.42", features = ["egui"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[features]
default = ["tracing"]
scripting = ["nightshade/scripting"]
openxr = ["nightshade/openxr"]
steam = ["nightshade/steam"]
tracing = ["nightshade/tracing"]
